--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
 - sudo apt-get install -y libudev-dev
 install:
 - pip3 install homeassistant
+- pip install -U six
 script:
 - hass -c . --script check_config
