--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,33 @@
+#
+# Travis CI configuration
+#
+# Simply tests that Home Assistant configuration is valid.
+#
+# @link https://docs.travis-ci.com/user/tutorial/
+# @link https://www.home-assistant.io/docs/ecosystem/backup/backup_github/#step-7-configuration-file-testing
+#
+
+# Select the base environment
 language: python
 python:
-- "3.7"
+  - "3.7"
+
+# Enable Travis caching of Python Packages (per branch)
+cache: pip
+
+# Prepare the CI environment to support Home Assistant
 before_install:
 - mv travis_secrets.yaml secrets.yaml
-- sudo apt-get install -y libudev-dev
+
+# Fix for missing homeassistant-ptozw 0.1.4 and pydispatcher 2.0.5
+# @link https://community.home-assistant.io/t/travis-ci-build-issues/119482
+- sudo apt-get install --assume-yes libudev-dev
+
+# Install Home Assistant
 install:
 - pip3 install homeassistant
-- pip install six
-- pip install pyparsing
+- pip3 install six==1.13.0
+
+# Test configuration files
 script:
-- hass -c . --script check_config
+  - hass --script check_config --config . --files
