--- a/entities/sensors/hass/hass_dev_release.yaml
+++ b/entities/sensors/hass/hass_dev_release.yaml
@@ -5,8 +5,7 @@ sensors:
     icon_template: mdi:dev-to
     friendly_name: Upcoming release
     value_template: >
-      {% set dev = ((as_timestamp(state_attr('calendar.home_assistant_devs', 
-      'start_time')) - as_timestamp(now())) / 86400) %}
+      {% set dev = ((as_timestamp(state_attr('calendar.home_assistant_devs','start_time')) - as_timestamp(now())) / 86400) %}
       {% if dev < -1 %} Released
       {% elif dev < 0 %} Today
       {% elif dev < 1 %} Tomorrow
