--- a/ci_secrets.yaml
+++ b/ci_secrets.yaml
@@ -48,14 +48,14 @@ tv_mac_address: xxxxxx
 
 # vacuum
 ip_vacuum: 000.000.0.000
-vacuum_token: 0000000000000000000
+vacuum_token: XX0000000000000000000
 xiaomi_username: xxxxxxxxx
 xiaomi_password: xxxxxxxxx
 
 # sabnzdb
 sab_api: 0000000000000000000
 sab_host: 000.000.0.000
-sab_port: 0000
+sab_port: 8080
 
 # mariadb url
 maria_db_url: xxxxxx
@@ -82,7 +82,7 @@ influxdb_user_pass: xxxxxxxxx
 
 # vu+ duo2
 vu_host: 000.000.0.000
-vu_port: 0000
+vu_port: 80
 vu_user: xxxx
 vu_pass: xxxxxxxx
 
