Vacuum token change

--- a/ci_secrets.yaml
+++ b/ci_secrets.yaml
@@ -48,7 +48,7 @@ tv_mac_address: xxxxxx
 
 # vacuum
 ip_vacuum: 000.000.0.000
-vacuum_token: XX0000000000000000000
+vacuum_token: XX0000000000000000000XXXXXXXXXXX
 xiaomi_username: xxxxxxxxx
 xiaomi_password: xxxxxxxxx
 
