--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Getting your configuration from GitHub
         uses: actions/checkout@v1
       - name: Running YAMLlint
-        uses: ibiqlik/action-yamllint@v1
+        uses: frenck/action-yamllint@v1
         with:
           config_file: .github/yamllint-config.yml
 
@@ -30,26 +30,6 @@ jobs:
         continue-on-error: true
         with:
           args: "remark --no-stdout --color --frail --use preset-lint-recommended ."
-  home_assistant_current_install:
-    runs-on: ubuntu-latest
-    needs: [yamllint, remarklint]
-    steps:
-      - name: Getting your configuration from GitHub
-        uses: actions/checkout@v1
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Copy stub files into configuration folder
-        run: |
-          cp -R ci_secrets.yaml secrets.yaml
-          cp -R ci_google_service_account.json google_service_account.json
-          sudo mkdir -p /github/workspace/tmp
-          HA_VERSION=$(<.HA_VERSION)
-      - name: Install Home Assistant
-        run: pip3 install homeassistant==$(cat .HA_VERSION)
-      - name: Check config
-        run: hass -c . --script check_config --info all
   home_assistant_latest_release:
     runs-on: ubuntu-latest
     needs: [yamllint, remarklint]
