Rule change yaml lint

--- a/.github/yamllint-config.yml
+++ b/.github/yamllint-config.yml
@@ -3,14 +3,13 @@
 extends: default
 
 rules:
-#  line-length: disable
+  line-length: disable
 #  comments: disable
-#  comments-indentation: disable
+  comments-indentation: disable
   document-start: disable
-#  indentation: disable
+  indentation: disable
 
 ignore: |
   custom_components/
   .git
-  .github/workflows/yaml-lint.yaml
   themes/
