--- a/entities/zones/work_fenne_vught.yaml
+++ b/entities/zones/work_fenne_vught.yaml
@@ -1,4 +1,5 @@
-# Work
+---
+# Work Fenne Vught
 name: Work Vught
 latitude: !secret latitude_work_fenne_vught
 longitude: !secret longitude_work_fenne_vught
