--- a/entities/zones/work_fenne_nijmegen.yaml
+++ b/entities/zones/work_fenne_nijmegen.yaml
@@ -1,4 +1,5 @@
-# Work
+---
+# Work Fenne Nijmegen
 name: Work Nijmegen
 latitude: !secret latitude_work_fenne_nijmegen
 longitude: !secret longitude_work_fenne_nijmegen
