--- a/automations/system/start_notification.yaml
+++ b/automations/system/start_notification.yaml
@@ -1,4 +1,5 @@
 ---
+# Start notification
 description: Send notification on Home Assistant start
 id: 4664df28-525d-445d-8b7a-381aa0e458a1
 alias: system_start_notification
