--- a/entities/sensors/hass/hass_release_notes.yaml
+++ b/entities/sensors/hass/hass_release_notes.yaml
@@ -1,3 +1,5 @@
+---
+# HASS release notes
 platform: rest
 name: hass_release_notes
 resource: https://api.github.com/repos/home-assistant/core/releases/latest
