--- a/entities/sensors/powergas/gas_current_m3.yaml
+++ b/entities/sensors/powergas/gas_current_m3.yaml
@@ -1,3 +1,5 @@
+---
+# Gas current m3
 platform: rest
 resource: http://192.168.20.51/api/v1/smartmeter?limit=1&json=object&round=on
 name: Gas current m3
