--- a/entities/sensors/powergas/gas_delta_day_m3.yaml
+++ b/entities/sensors/powergas/gas_delta_day_m3.yaml
@@ -1,3 +1,5 @@
+---
+# Gas delta day M3
 platform: rest
 resource: http://192.168.20.51/api/v1/powergas/day?limit=1&json=object&round=off
 name: Gas delta day M3
