--- a/entities/sensors/powergas/power_current_w.yaml
+++ b/entities/sensors/powergas/power_current_w.yaml
@@ -1,3 +1,5 @@
+---
+# Power current W
 platform: rest
 resource: http://192.168.20.51/api/v1/smartmeter?limit=1&json=object&round=on
 name: Power current W
