--- a/entities/sensors/powergas/power_delta_month_kwh.yaml
+++ b/entities/sensors/powergas/power_delta_month_kwh.yaml
@@ -1,3 +1,5 @@
+---
+# Power delta month kWh
 platform: rest
 resource: http://192.168.20.51/api/v1/powergas/month?limit=1&json=object&round=off
 name: Power delta month kWh
