--- a/entities/sensors/powergas/power_high_day_eur.yaml
+++ b/entities/sensors/powergas/power_high_day_eur.yaml
@@ -1,3 +1,5 @@
+---
+# Power high day euro
 platform: rest
 resource: http://192.168.20.51/api/v1/financial/day?limit=1&json=object&round=off
 name: Power high day euro
