--- a/entities/sensors/powergas/power_low_kwh.yaml
+++ b/entities/sensors/powergas/power_low_kwh.yaml
@@ -1,3 +1,5 @@
+---
+# Power low kWh
 platform: rest
 resource: http://192.168.20.51/api/v1/smartmeter?limit=1&json=object&round=off
 name: Power low kWh
