--- a/.github/workflows/home_assistant.yml
+++ b/.github/workflows/home_assistant.yml
@@ -37,9 +37,20 @@ jobs:
       matrix:
         version: ["stable", "beta", "dev"]
     steps:
-      - name: ⤵️ Check out configuration from GitHub
+      - name: Checkout repository
         uses: actions/checkout@v2
-      - name: 🚀 Run Home Assistant Configuration Check
+      - name: Create fake empty files
+        run: |
+          touch ./home-assistant_v2.db
+          touch ./home-assistant.log
+      - name: Create empty custom components folder
+        run: |
+          mkdir -p ./custom_components
+      - name: Clone custom component Brandstofprijzen
+        run: |
+          git clone https://github.com/metbril/home-assistant-brandstofprijzen.git
+          mv -v home-assistant-brandstofprijzen/custom_components/* ./custom_components
+      - name: Check configuration
         uses: frenck/action-home-assistant@v1.0.0
         with:
           secrets: ./.stubs/ci_secrets.yaml
