--- a/.github/workflows/home_assistant.yml
+++ b/.github/workflows/home_assistant.yml
@@ -50,6 +50,14 @@ jobs:
         run: |
           git clone https://github.com/metbril/home-assistant-brandstofprijzen.git
           mv -v home-assistant-brandstofprijzen/custom_components/* ./custom_components
+      - name: Clone custom component Plex recently added 
+        run: |
+          git clone https://github.com/briis/unifiprotect
+          mv -v unifiprotect/custom_components/* ./custom_components
+      - name: Clone custom component Brandstofprijzen
+        run: |
+          git clone https://github.com/thomasloven/hass-browser_mod
+          mv -v hass-browser_mod/custom_components/* ./custom_components
       - name: Check configuration
         uses: frenck/action-home-assistant@v1.0.0
         with:
