--- a/.github/workflows/home_assistant.yml
+++ b/.github/workflows/home_assistant.yml
@@ -50,14 +50,42 @@ jobs:
         run: |
           git clone https://github.com/metbril/home-assistant-brandstofprijzen.git
           mv -v home-assistant-brandstofprijzen/custom_components/* ./custom_components
-      - name: Clone custom component Plex recently added 
+      - name: Clone custom component Unifi protect
         run: |
           git clone https://github.com/briis/unifiprotect
           mv -v unifiprotect/custom_components/* ./custom_components
-      - name: Clone custom component Brandstofprijzen
+      - name: Clone custom component Browser mod
         run: |
           git clone https://github.com/thomasloven/hass-browser_mod
           mv -v hass-browser_mod/custom_components/* ./custom_components
+      - name: Clone custom component Spotcast
+        run: |
+          git clone https://github.com/fondberg/spotcast
+          mv -v spotcast/custom_components/* ./custom_components
+      - name: Clone custom component Afvalwijzer
+        run: |
+          git clone https://github.com/xirixiz/homeassistant-afvalwijzer
+          mv -v homeassistant-afvalwijzer/custom_components/* ./custom_components
+      - name: Clone custom component Cryptoinfo
+        run: |
+          git clone https://github.com/heyajohnny/cryptoinfo
+          mv -v cryptoinfo/custom_components/* ./custom_components
+      - name: Clone custom component Plex recently added
+        run: |
+          git clone https://github.com/custom-components/sensor.plex_recently_added
+          mv -v sensor.plex_recently_added/custom_components/* ./custom_components
+      - name: Clone custom component Radarr upcoming media
+        run: |
+          git clone https://github.com/custom-components/sensor.sonarr_upcoming_media
+          mv -v sensor.sonarr_upcoming_media/custom_components/* ./custom_components
+      - name: Clone custom component Sonarr upcoming media
+        run: |
+          git clone https://github.com/custom-components/sensor.radarr_upcoming_media
+          mv -v sensor.radarr_upcoming_media/custom_components/* ./custom_components
+      - name: Clone custom component Xiaomi map cloud extractor
+        run: |
+          git clone https://github.com/PiotrMachowski/Home-Assistant-custom-components-Xiaomi-Cloud-Map-Extractor
+          mv -v Home-Assistant-custom-components-Xiaomi-Cloud-Map-Extractor/custom_components/* ./custom_components
       - name: Check configuration
         uses: frenck/action-home-assistant@v1.0.0
         with:
