Allergy pollen added

--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -138,3 +138,6 @@ dyson_device_1_ip: 000.000.0.000
 
 # github
 github_token: 0000000000000000000
+
+# weather.com allergy forecast
+weather_com_allergy_forecast: https://url.com/sub/12341234123412345
