--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -1,4 +1,5 @@
 ---
 # Add Customizations
 homeassistant:
-  customize: !include_dir_merge_named ../customizations
+  customize: !include_dir_merge_named ../customizations/entities
+  customize_glob: !include_dir_merge_named ../customizations/global
