--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -127,8 +127,8 @@ nest_project_id: 0000000000000000000
 nest_subscriber_id: 0000000000000000000
 
 # solaredge
-solaredge_api: 0000000000000000000
-solaredge_site_id: 0000000
+# solaredge_api: 0000000000000000000
+# solaredge_site_id: 0000000
 
 # dyson
 dyson_username: username@mail.com
