Power consumption change

--- a/entities/sensors/powergas/power_current_consumption_w.yaml
+++ b/entities/sensors/powergas/power_current_consumption_w.yaml
@@ -2,6 +2,6 @@
 # Power current W
 platform: rest
 resource: http://192.168.20.51/api/v1/smartmeter?limit=1&json=object&round=on
-name: Power current W
+name: Power current consumption W
 value_template: '{{ value_json.0.CONSUMPTION_W }}'
 unit_of_measurement: "W"
