--- a/entities/sensors/template.yaml
+++ b/entities/sensors/template.yaml
@@ -33,7 +33,7 @@ sensors:
       {% set lights = [states.light.kitchen, states.light.living_room, states.light.middle_room, states.light.dining_room, states.light.hue_white_lamp_studyroom, states.light.hue_white_lamp_bedroom, states.light.hue_being_ceiling_landing] %}
       {% set lights_on = lights | selectattr('state','eq','on') | list %}
       {% set lights_name = lights | selectattr('state','eq','on') | map(attribute='name') | join(', ') %}
-      {% set switches = [states.fan.living_room, states.media_player.living_room_tv, states.media_player.master_bedroom_tv, states.media_player.vuduo2] %}
+      {% set switches = [states.fan.pure_cool_link, states.fan.living_room, states.media_player.living_room_tv, states.media_player.master_bedroom_tv, states.media_player.vuduo2] %}
       {% set switches_on = switches | selectattr('state','eq','on') | list %}
       {% set switches_name = switches | selectattr('state','eq','on') | map(attribute='name') | join(', ') %}
       {% if (lights_on | length == 0) and (switches_on | length == 1) %}
