--- a/entities/binary_sensors/template.yaml
+++ b/entities/binary_sensors/template.yaml
@@ -54,7 +54,7 @@ sensors:
       {% set kitchen_lights_on = is_state("light.kitchen", "on") %}
       {% set middle_room_lights_on = is_state("light.middle_room", "on") %}
       {% set dining_room_lights_on = is_state("light.dining_room", "on") %}
-      {% set hallway_light_on = is_state("light.hue_ambiance_spot_hall", "on") %}
+      {% set hallway_lights_on = is_state("light.hallway", "on") %}
       {{ living_room_lights_on or kitchen_lights_on or middle_room_lights_on or dining_room_lights_on or hallway_lights_on }}
 
   anything_on:
