--- a/integrations/spotcast.yaml
+++ b/integrations/spotcast.yaml
@@ -1,5 +1,5 @@
 ---
 # Spotcast
-# spotcast:
-#   sp_dc: !secret sp_dc
-#   sp_key: !secret sp_key
+spotcast:
+  sp_dc: !secret sp_dc
+  sp_key: !secret sp_key
