--- a/entities/sensors/finance/fixer.yaml
+++ b/entities/sensors/finance/fixer.yaml
@@ -1,7 +1,6 @@
 ---
 # Fixer
-sensor:
-  - platform: fixer
-    target: USD
-    name: Exchange Rate USD
-    api_key: !secret fixer_api_key
+platform: fixer
+target: USD
+name: Exchange Rate USD
+api_key: !secret fixer_api_key
