--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -93,8 +93,8 @@ pve_username: xxxx
 pve_password: xxxxxxxxx
 
 # spotify
-# sp_dc: xxxxxx
-# sp_key: 0000000000000000000
+sp_dc: xxxxxx
+sp_key: 0000000000000000000
 
 # plex
 plex_api: 0000000000000000000
