--- a/entities/binary_sensors/motion.yaml
+++ b/entities/binary_sensors/motion.yaml
@@ -32,7 +32,7 @@ sensors:
   activity_in_hallway:
     friendly_name: Activity in the hallway
     value_template: >
-      {{ is_state("binary_sensor.hallway_sensor_motion", "on") }}
+      {{ is_state("binary_sensor.hue_motion_sensor_hallway_occupancy", "on") }}
     delay_off: "00:02:00"
 
   activity_in_study_room:
