--- a/integrations/http.yaml
+++ b/integrations/http.yaml
@@ -3,3 +3,8 @@
 http:
   ip_ban_enabled: true
   login_attempts_threshold: 5
+  use_x_forwarded_for: true
+  trusted_proxies:
+    - 172.30.33.5
+    - 127.0.0.1
+    - ::1
