--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -81,7 +81,7 @@ influxdb_db_name: xxxxxxxxx
 influxdb_user_name: xxxxxxxxx
 influxdb_user_pass: xxxxxxxxx
 
-# vu+ duo2
+# enigma2
 vu_host: 000.000.0.000
 vu_port: 80
 vu_user: xxxx
