--- a/entities/sensors/powergas/power_production_low_kwh.yaml
+++ b/entities/sensors/powergas/power_production_low_kwh.yaml
@@ -1,7 +1,7 @@
 ---
-# Power high kWh
+# Power production low kWh
 platform: rest
 resource: http://192.168.20.51/api/v1/smartmeter?limit=1&json=object&round=off
-name: Power high kWh
-value_template: '{{ value_json.0.CONSUMPTION_KWH_HIGH | round(2) }}'
+name: Power production low kWh
+value_template: '{{ value_json.0.PRODUCTION_KWH_LOW | round(2) }}'
 unit_of_measurement: "kWh"
