--- a/entities/media_players/enigma2.yaml
+++ b/entities/media_players/enigma2.yaml
@@ -2,8 +2,9 @@
 # Enigma2 Openwebif
 platform: enigma2
 host: !secret vu_host
-use_channel_icon: true
 port: !secret vu_port
 username: !secret vu_user
 password: !secret vu_pass
 name: vuduo2
+use_channel_icon: true
+source_bouquet: Ziggo
