--- a/entities/sensors/media/radarr_upcoming_media.yaml
+++ b/entities/sensors/media/radarr_upcoming_media.yaml
@@ -1,11 +1,10 @@
 ---
 # Radarr upcoming media
-platform: radarr
+platform: radarr_upcoming_media
 api_key: !secret radarr_api
 host: !secret radarr_host
 port: !secret radarr_port
-monitored_conditions:
-  - movies
-  - upcoming
-  - status
 days: 14
+ssl: false
+theaters: false
+max: 10
