--- a/entities/binary_sensors/motion.yaml
+++ b/entities/binary_sensors/motion.yaml
@@ -26,13 +26,14 @@ sensors:
   activity_in_living_room:
     friendly_name: Activity in the living room
     value_template: >
-      {{ is_state("binary_sensor.sensor_motion_living_room_ias_zone", "on") }}
+      {{ is_state("binary_sensor.hue_motion_sensor_living_room_motion", "on") }}
     delay_off: "00:02:00"
 
   activity_in_hallway:
     friendly_name: Activity in the hallway
     value_template: >
-      {{ is_state("binary_sensor.hue_motion_sensor_hallway_occupancy", "on") }}
+      {{ is_state("binary_sensor.hue_motion_sensor_hallway_occupancy", "on")
+      or is_state("binary_sensor.sensor_motion_hallway_ias_zone", "on") }}
     delay_off: "00:02:00"
 
   activity_in_study_room:
