--- a/entities/sensors/powergas/power_current_se.yaml
+++ b/entities/sensors/powergas/power_current_se.yaml
@@ -4,5 +4,5 @@ platform: template
 sensors:
   power_current_se:
     friendly_name: Solaredge Current Power
-    value_template: "{{ states('sensor.solaredge_current_power') | float | round(1) }}"
+    value_template: "{{ states('sensor.solaredge_current_power') | float(0) | round(1) }}"
     unit_of_measurement: "W"
