--- a/scenes.yaml
+++ b/scenes.yaml
@@ -70,7 +70,7 @@
         - light.hue_ambiance_spot_6
         - light.hue_ambiance_spot_7
         - light.hue_ambiance_spot_8
-        - light.hue_filament_bulb_1
+        - light.hue_filament_dining_room
       friendly_name: Downstairs
       supported_features: 43
       state: 'on'
