change vacuum entity

--- a/entities/sensors/home/vacuum.yaml
+++ b/entities/sensors/home/vacuum.yaml
@@ -7,15 +7,15 @@ sensors:
     friendly_name: Battery
     unit_of_measurement: '%'
     value_template: >
-      {{ state_attr('vacuum.xiaomi_vacuum_cleaner', 'battery_level') }}
+      {{ state_attr('vacuum.roborock_s6', 'battery_level') }}
     icon_template: >
-      {{ state_attr('vacuum.xiaomi_vacuum_cleaner', 'battery_icon') }}
+      {{ state_attr('vacuum.roborock_s6', 'battery_icon') }}
 
   roborock_state:
     friendly_name: Roborock S6
     icon_template: custom:roborock-vacuum
     value_template: >
-      {% set entity_id = 'vacuum.xiaomi_vacuum_cleaner' %}
+      {% set entity_id = 'vacuum.roborock_s6' %}
       {% if is_state(entity_id, 'docked') %} Docked
       {% elif is_state(entity_id, 'paused') %} Paused
       {% elif is_state(entity_id, 'cleaning') %} Cleaning
@@ -25,41 +25,41 @@ sensors:
 
   roborock_speed:
     value_template: >
-      {{ state_attr('vacuum.xiaomi_vacuum_cleaner', 'fan_speed') }}
+      {{ state_attr('vacuum.roborock_s6', 'fan_speed') }}
 
   roborock_filter:
     friendly_name: Filter
     icon_template: custom:roborock-filter
     unit_of_measurement: '%'
     value_template: >
-      {{ (states('sensor.xiaomi_vacuum_cleaner_filter_left')|float / 1.5) | round | default(0) }}
+      {{ (states('sensor.roborock_s6_filter_left')|float / 1.5) | round | default(0) }}
 
   roborock_mainbrush:
     friendly_name: Main Brush
     icon_template: custom:roborock-mainbrush
     unit_of_measurement: '%'
     value_template: >
-      {{ (states('sensor.xiaomi_vacuum_cleaner_main_brush_left')|float / 3) | round | default(0) }}
+      {{ (states('sensor.roborock_s6_main_brush_left')|float / 3) | round | default(0) }}
 
   roborock_sensors:
     friendly_name: Sensor
     icon_template: custom:roborock-sensor
     unit_of_measurement: '%'
     value_template: >
-      {{ (states('sensor.xiaomi_vacuum_cleaner_sensor_dirty_left')|float / 0.3) | round | default(0) }}
+      {{ (states('sensor.roborock_s6_sensor_dirty_left')|float / 0.3) | round | default(0) }}
 
   roborock_sidebrush:
     friendly_name: Side Brush
     icon_template: custom:roborock-sidebrush
     unit_of_measurement: '%'
     value_template: >
-      {{ (states('sensor.xiaomi_vacuum_cleaner_side_brush_left')|float / 2) | round | default(0) }}
+      {{ (states('sensor.roborock_s6_side_brush_left')|float / 2) | round | default(0) }}
 
   roborock_last_clean:
     friendly_name: Last Cleaned
     icon_template: mdi:calendar-clock
     value_template: >
-      {% set last_cleaned = (as_timestamp(now(),0) - as_timestamp(states('sensor.xiaomi_vacuum_cleaner_last_clean_end'),0)) | default(0) %}
+      {% set last_cleaned = (as_timestamp(now(),0) - as_timestamp(states('sensor.roborock_s6_last_clean_end'),0)) | default(0) %}
       {% if last_cleaned | timestamp_custom('%d') | int -1 == 1 %} {{ last_cleaned | timestamp_custom('%d') | int -1 }} day ago
       {% elif last_cleaned | timestamp_custom('%d') | int -1 >= 2 %} {{ last_cleaned | timestamp_custom('%d') | int -1 }} days ago
       {% elif last_cleaned | timestamp_custom('%H') | int -1 == 1 %} {{ last_cleaned | timestamp_custom('%H') | int -1 }} hour ago
