--- a/integrations/proximity.yaml
+++ b/integrations/proximity.yaml
@@ -5,6 +5,6 @@ proximity:
     ignored_zones:
       - work
     devices:
-      - device_tracker.iphone_wesley
+      - device_tracker.iphone_wv
       - device_tracker.iphone
     tolerance: 50
