--- a/entities/cameras/xiaomi_map.yaml
+++ b/entities/cameras/xiaomi_map.yaml
@@ -10,20 +10,9 @@ attributes:
   - calibration_points
 colors:
   color_map_inside: [32, 115, 185, 0]
-  color_map_outside: [19, 87, 148, 0]
-  color_map_wall: [100, 196, 254, 0]
+  color_map_outside: [42, 33, 57]
+  color_map_wall: [255,255,255]
   color_map_wall_v2: [93, 109, 126, 0]
-  color_grey_wall: [93, 109, 126, 0]
-  color_path: [255, 255, 255]
-  color_goto_path: [0, 255, 0]
-  color_predicted_path: [255, 255, 0, 0]
-  color_zones: [0xAD, 0xD8, 0xFF, 0]
-  color_zones_outline: [0xAD, 0xD8, 0xFF, 0]
-  color_virtual_walls: [255, 0, 0, 0]
-  color_no_go_zones: [255, 33, 55, 100]
-  color_no_go_zones_outline: [255, 0, 0, 120]
-  color_no_mop_zones: [163, 130, 211, 0]
-  color_no_mop_zones_outline: [163, 130, 211, 0]
   color_charger: [204, 204, 204]
   color_robo: [255, 255, 255]
   color_unknown: [0, 0, 0]
