--- a/entities/cameras/xiaomi_map.yaml
+++ b/entities/cameras/xiaomi_map.yaml
@@ -11,7 +11,7 @@ attributes:
 colors:
   color_map_inside: [32, 115, 185, 0]
   color_map_outside: [42, 33, 57]
-  color_map_wall: [255,255,255]
+  color_map_wall: [255, 255, 255]
   color_map_wall_v2: [93, 109, 126, 0]
   color_charger: [204, 204, 204]
   color_robo: [255, 255, 255]
