--- a/entities/sensors/media/plex_recently_added_movies.yaml
+++ b/entities/sensors/media/plex_recently_added_movies.yaml
@@ -2,7 +2,7 @@
 # Plex movies recently added
 platform: plex_recently_added
 name: Recently Added Movies
-token: !secret plex_api
+token: !secret plex_token
 host: !secret plex_host
 port: !secret plex_port
 section_types:
