--- a/entities/sensors/media/plex_recently_added_shows.yaml
+++ b/entities/sensors/media/plex_recently_added_shows.yaml
@@ -2,7 +2,7 @@
 # Plex shows recently added
 platform: plex_recently_added
 name: Recently Added Shows
-token: !secret plex_api
+token: !secret plex_token
 host: !secret plex_host
 port: !secret plex_port
 section_types:
