--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -97,7 +97,7 @@ sp_dc: xxxxxx
 sp_key: 0000000000000000000
 
 # plex
-plex_api: 0000000000000000000
+plex_token: 0000000000000000000
 plex_host: 000.000.0.000
 plex_port: 32400
 
