--- a/entities/sensors/media/radarr_upcoming_media.yaml
+++ b/entities/sensors/media/radarr_upcoming_media.yaml
@@ -4,7 +4,7 @@ platform: radarr_upcoming_media
 api_key: !secret radarr_api
 host: !secret radarr_host
 port: !secret radarr_port
+urlbase: /radarr
 days: 14
 ssl: false
-theaters: false
 max: 10
