--- a/entities/sensors/media/sonarr_upcoming_media.yaml
+++ b/entities/sensors/media/sonarr_upcoming_media.yaml
@@ -4,6 +4,7 @@ platform: sonarr_upcoming_media
 api_key: !secret sonarr_api
 host: !secret sonarr_host
 port: !secret sonarr_port
+urlbase: /sonarr
 days: 14
 ssl: false
 max: 10
