--- a/integrations/irrigation_unlimited.yaml
+++ b/integrations/irrigation_unlimited.yaml
@@ -4,7 +4,9 @@ irrigation_unlimited:
   controllers:
     zones:
       name: 'Lawn'
-      entity_id: "switch.irrigation_zone_lawn"
+      entity_id: "switch.irrigation_lawn"
+      show:
+        timeline: true
       schedules:
         - name: 'Before sunrise'
           time:
@@ -12,3 +14,4 @@ irrigation_unlimited:
             before: '00:10'
           duration: '00:15'
           weekday: [sun, wed, fri]
+          anchor: finish
