--- a/entities/sensors/home/active_devices.yaml
+++ b/entities/sensors/home/active_devices.yaml
@@ -5,7 +5,7 @@ sensors:
 
   active_devices:
     value_template: >
-      {% set lights = [states.light.kitchen, states.light.living_room, states.light.middle_room, states.light.dining_room, states.light.hue_white_lamp_studyroom, states.light.hue_white_lamp_bedroom, states.light.hue_being_ceiling_landing] %}
+      {% set lights = [states.light.kitchen, states.light.living_room, states.light.middle_room, states.light.dining_room, states.light.study_light, states.light.bedroom_light, states.landing_light] %}
       {% set lights_on = lights | selectattr('state','eq','on') | list %}
       {% set lights_name = lights | selectattr('state','eq','on') | map(attribute='name') | join(', ') %}
       {% set switches = [states.fan.pure_cool_link, states.fan.living_room, states.media_player.living_room_tv, states.media_player.master_bedroom_tv, states.media_player.vuduo2] %}
