--- a/automations.yaml
+++ b/automations.yaml
@@ -70,47 +70,6 @@
   - service: openuv.update_protection_data
     data: {}
   mode: single
-- id: '1623004018165'
-  alias: Hue Dimmer Switch Study Room
-  description: ''
-  use_blueprint:
-    path: vanstinator/zha-philips-hue-dimmer-switch-rwl020-rwl021.yaml
-    input:
-      remote: f2f515c72a43a7cbf44b1af01098ed6c
-      brightness: 80
-      light:
-        area_id: 4e588329bb6b4725a635aca3260970e0
-      force_brightness: false
-- id: '1623004111448'
-  alias: Hue Dimmer Switch Bedroom
-  description: ''
-  use_blueprint:
-    path: vanstinator/zha-philips-hue-dimmer-switch-rwl020-rwl021.yaml
-    input:
-      remote: 7a95380da4b6b277a58d8d50e6563947
-      light:
-        area_id:
-        - 236628dd9b2341f09ce0edc0f3861977
-        - 4e588329bb6b4725a635aca3260970e0
-        - 13328c04b1b440789f6944bd19a3def1
-        - 6ed33154b4d444b0b37b012a1f13d6ed
-        - b1352033ec3147e1911c9d5e60a1361c
-        - 8f22318d846d409398d85596cfd5bf8c
-        - c875e4db9fb44651bc804138fdbe430b
-      brightness: 50
-- id: '1623005346863'
-  alias: Hue Dimmer Switch Downstairs
-  description: ''
-  use_blueprint:
-    path: vanstinator/zha-philips-hue-dimmer-switch-rwl020-rwl021.yaml
-    input:
-      remote: be13f5952c5470501943d9363012da8d
-      light:
-        area_id:
-        - c875e4db9fb44651bc804138fdbe430b
-        - 6ed33154b4d444b0b37b012a1f13d6ed
-        - b1352033ec3147e1911c9d5e60a1361c
-      brightness: 50
 - id: '1623006218863'
   alias: Low battery level detection & notification for all battery sensors
   description: ''
@@ -200,3 +159,59 @@
     data:
       message: Home Assistant update is available
   mode: single
+- id: '1651682926928'
+  alias: Bedroom Dimmer Switch
+  description: ''
+  use_blueprint:
+    path: hugalafutro/Z2M_Hue_Dimmer_Switch.yaml
+    input:
+      dimmer_action: sensor.bedroom_dimmer_switch_action
+      action_on_press:
+      - service: light.turn_on
+        data:
+          transition: 2
+        target:
+          area_id: upstairs
+      action_off_press:
+      - service: light.turn_off
+        data:
+          transition: 2
+        target:
+          area_id: upstairs
+      action_off_hold:
+      - service: light.turn_off
+        data:
+          transition: 2
+        target:
+          area_id:
+          - downstairs
+          - upstairs
+      action_on_hold:
+      - service: light.turn_on
+        data: {}
+        target:
+          area_id:
+          - upstairs
+          - downstairs
+      action_up_hold:
+      - service: light.turn_on
+        data:
+          brightness_step_pct: 10
+        target:
+          area_id: upstairs
+      action_down_hold:
+      - service: light.turn_on
+        data:
+          brightness_step_pct: -10
+      action_up_press:
+      - service: light.turn_on
+        data:
+          brightness_step_pct: 5
+        target:
+          area_id: upstairs
+      action_down_press:
+      - service: light.turn_on
+        data:
+          brightness_step_pct: -5
+        target:
+          area_id: upstairs
